<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#102027"
    tools:context="com.shreeganesha.developers.swarajya_dhol_tasha.Home">



    <ImageView
        android:id="@+id/Home"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/home"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/Adms"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toStartOf="@+id/Adms"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.277"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="8dp"
        />

    <ImageView
        android:id="@+id/Adms"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/admission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Home"
        app:layout_constraintTop_toTopOf="@+id/Home"
        android:layout_alignTop="@+id/Home"
        android:layout_toRightOf="@+id/Home"
        android:layout_toEndOf="@+id/Home"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/enHome"
        android:textColor="#fff"
        android:layout_below="@+id/Home"
        android:layout_alignRight="@+id/Home"
        android:layout_alignEnd="@+id/Home"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:id="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engAdmission"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_below="@+id/Adms"
        android:layout_alignLeft="@+id/Adms"
        android:layout_alignStart="@+id/Adms"
        android:id="@+id/textView6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engGallery"
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/textView4"
        android:layout_below="@+id/gallary"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abtDevlpr"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_below="@+id/gallary"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engContact"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_below="@+id/Cont"
        android:layout_alignRight="@+id/Cont"
        android:layout_alignEnd="@+id/Cont"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/textView10" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engSocial"
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/textView3"
        android:layout_below="@+id/Soc"
        android:layout_alignRight="@+id/Soc"
        android:layout_alignEnd="@+id/Soc" />

    <ImageView
        android:id="@+id/Cont"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/contact"
        app:layout_constraintEnd_toEndOf="@+id/Home"
        app:layout_constraintStart_toStartOf="@+id/Home"
        app:layout_constraintBottom_toTopOf="@+id/Soc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/Home"
        app:layout_constraintVertical_bias="0.949"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Home"
        android:layout_alignStart="@+id/Home" />

    <ImageView
        android:id="@+id/Soc"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/social"
        app:layout_constraintStart_toStartOf="@+id/Adms"
        app:layout_constraintEnd_toEndOf="@+id/Adms"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/Devloper"
        app:layout_constraintTop_toBottomOf="@+id/Adms"
        app:layout_constraintVertical_bias="0.949"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Adms"
        android:layout_alignStart="@+id/Adms" />

    <ImageView
        android:id="@+id/gallary"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/gallary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Cont"
        app:layout_constraintEnd_toEndOf="@+id/Cont"
        app:layout_constraintTop_toTopOf="@+id/Devloper"
        android:layout_alignTop="@+id/Devloper"
        android:layout_alignLeft="@+id/Home"
        android:layout_alignStart="@+id/Home" />

    <ImageView
        android:id="@+id/Devloper"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/devloper"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Soc"
        app:layout_constraintEnd_toEndOf="@+id/Soc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/Adms"
        android:layout_alignStart="@+id/Adms" />

</RelativeLayout>
